--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -1,52 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.lineageos.settings.doze"
+    package="com.cyanogenmod.settings.doze"
     android:versionCode="1"
     android:versionName="1.0"
-    android:sharedUserId="android.uid.system"
-    >
+    android:sharedUserId="android.uid.system">
 
-    <uses-permission android:name="android.permission.DEVICE_POWER" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <protected-broadcast android:name="com.android.systemui.doze.pulse" />
-
     <uses-sdk
-        android:minSdkVersion="23"
-        android:targetSdkVersion="23" />
+        android:minSdkVersion="21"
+        android:targetSdkVersion="21"/>
 
     <application
-        android:allowBackup="true"
-        android:persistent="true" >
+        android:label="ZenfoneDoze"
+        android:persistent="true">
 
-        <receiver android:name="org.lineageos.settings.doze.BootCompletedReceiver">
+        <receiver android:name="com.cyanogenmod.settings.doze.BootCompletedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
-        <service android:name="org.lineageos.settings.doze.SensorsDozeService"
-                 android:permission="SensorsDozeService">
+        <service android:name="com.cyanogenmod.settings.doze.DozeService"
+                 android:permission="ZenfoneDozeService">
         </service>
 
         <activity
             android:name=".DozeSettings"
             android:label="@string/ambient_display_title"
-            android:theme="@style/Theme.Main">
+            android:theme="@android:style/Theme.Material.Settings">
             <intent-filter>
-                <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
             <meta-data
-                android:name="org.lineageos.settings.summary.receiver"
-                android:value="org.lineageos.settings.doze.DozeReceiver" />
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.device" />
             <meta-data
-                android:name="org.lineageos.settings.summary.key"
-                android:value="doze_device_settings" />
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_settings_doze" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/screen_gestures_panel_dashboard_summary" />
         </activity>
 
     </application>
-
 </manifest>
